semoga revisi terakhir
