# routes/auth_routes.go
@@ -5,11 +5,10 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func AuthRoutes(router *gin.Engine, authHandler *handlers.AuthHandler) {
+func AuthRoutes(router *gin.Engine, authHandler *handlers.AuthHandler, authMiddleware gin.HandlerFunc) {
 	auth := router.Group("/auth")
 	{
 		auth.POST("/login", authHandler.Login)
-		auth.POST("/logout", authHandler.Logout)
-		auth.GET("/verify", authHandler.VerifyToken)
+		auth.GET("/verify", authMiddleware, authHandler.VerifyToken) 
 	}
 }
